--- a/research.html
+++ b/research.html
@@ -140,20 +140,35 @@
   <p style="margin: 0 0 8px 0;">
      <strong style="color: #d63384;">A New Perspective of the Meese-Rogoff Puzzle: Application of Sparse Dynamic Shrinkage</strong>
   </p>
-    <div>
-         <p>[
-      <a href="https://arxiv.org/abs/2507.14408" target="_blank">Working Paper</a> |  Code ]<br/>
-      <em>Abstract:</em> We propose the Markov Switching Dynamic Shrinkage process (MSDSP), nesting the Dynamic Shrinkage Process (DSP) of Kowal et al. (2019). We revisit the Meese-Rogoff puzzle (Meese and Rogoff, 1983a,b, 1988) by applying the MSDSP to the economic models deemed inferior to the random walk model for exchange rate predictions. The flexibility of the MSDSP model captures the possibility of zero coefficients (sparsity), constant coefficient (dynamic shrinkage), as well as sudden and gradual parameter movements (structural change) in the time-varying parameter model setting. We also apply MSDSP in the context of Bayesian predictive synthesis (BPS) (McAlinn and West, 2019), where dynamic combination schemes exploit the information from the alternative economic models. Our analysis provide a new perspective to the Meese-Rogoff puzzle, illustrating that the economic models, enhanced with the parameter flexibility of the MSDSP, produce predictive distributions that are superior to the random walk model, even when stochastic volatility is considered.
-</p>
-    </div>
+<div>
+  <p>
+    [ <a href="https://arxiv.org/abs/2507.14408" target="_blank">Working Paper</a> | Code ]
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
+      <em>
+        We propose the Markov Switching Dynamic Shrinkage process (MSDSP), nesting the Dynamic Shrinkage Process (DSP) of Kowal et al. (2019). We revisit the Meese-Rogoff puzzle (Meese and Rogoff, 1983a,b, 1988) by applying the MSDSP to the economic models deemed inferior to the random walk model for exchange rate predictions. The flexibility of the MSDSP model captures the possibility of zero coefficients (sparsity), constant coefficient (dynamic shrinkage), as well as sudden and gradual parameter movements (structural change) in the time-varying parameter model setting. We also apply MSDSP in the context of Bayesian predictive synthesis (BPS) (McAlinn and West, 2019), where dynamic combination schemes exploit the information from the alternative economic models. Our analysis provide a new perspective to the Meese-Rogoff puzzle, illustrating that the economic models, enhanced with the parameter flexibility of the MSDSP, produce predictive distributions that are superior to the random walk model, even when stochastic volatility is considered.
+      </em>
+    </span>
+  </p>
+</div>
 
   <p style="margin: 0 0 8px 0;">
      <strong style="color: #d63384;">A Hierarchical Markov-switching Model for Bull and Bear Markets (Dissertation: Chap 1. Working)</strong>
   </p>
-    <div>
-    
-        <p>The first paper integrates the hierarchical Markov-switching model with model-based clustering to address high-dimensional data challenges, aiming to identify bull and bear markets. This approach enhances both identification and forecasting performance.</p>
-    </div>
+	<div>
+  <p>
+    [ Working Paper | Code ]
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
+      <em>
+The first paper integrates the hierarchical Markov-switching model with model-based clustering to address high-dimensional data challenges, aiming to identify bull and bear markets. This approach enhances both identification and forecasting performance.
+      </em>
+    </span>
+  </p>
+</div>
+	
+	
+	
 </div>
 
 
@@ -165,16 +180,33 @@
   <p style="margin: 0 0 8px 0;">
   <p style="margin: 0 0 8px 0;">
      <strong style="color: #d63384;">Meta-Analysis with a General Genetic Model (Summer vacation program, 2019)</strong>
+  </p>	
+	<div>
+  <p>
+    [ <a href="https://www.dropbox.com/scl/fi/pet2wde454ogcvdiyjpfb/ZhengFan_Poster_Meta_analysis.pdf?rlkey=1n0ow25yqnae992b8m7dhs103&st=idr79p1o&dl=0" target="_blank">Poster</a> | Code ]
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
+      <em>
+Assessing the effect of the ACTN3 gene on athletic performance. Developing a widely applicable general model for studying different genetic effects.      </em>
+    </span>
   </p>
-    <div>
-         <p>Assessing the effect of the ACTN3 gene on athletic performance. Developing a widely applicable general model for studying different genetic effects. The poster can be viewed <a href="https://www.dropbox.com/scl/fi/pet2wde454ogcvdiyjpfb/ZhengFan_Poster_Meta_analysis.pdf?rlkey=1n0ow25yqnae992b8m7dhs103&st=idr79p1o&dl=0" target="_blank">HERE</a>.</p>
-    </div>
+</div>
+
+
   <p style="margin: 0 0 8px 0;">
      <strong style="color: #d63384;">Global News vs. Local News with Multi-homing Consumers (Honours thesis, 2018)</strong>
   </p>
-    <div>
-         <p>Extending a demographic model initiated by Salop generates some suggestive theoretical results.</p>
-    </div>
+		<div>
+  <p>
+    [ Working Paper | Code ]
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
+      <em>
+Extending a demographic model initiated by Salop generates some suggestive theoretical results.      </em>
+    </span>
+  </p>
+</div>
+
 </div>
 
 <div style="margin-bottom: 30px;" id="conference-presentations">
@@ -209,6 +241,45 @@
 </footer>
 </div><!--// doc -->
 
+
+
+<style>
+  .toggle-header {
+    cursor: pointer;
+    font-weight: normal;
+    font-size: 0.95em;
+    user-select: none;
+    text-decoration: underline;
+    display: inline-block;
+    padding: 2px 4px;
+    border-radius: 4px;
+    transition: background-color 0.2s;
+  }
+
+  .toggle-header:hover {
+    background-color: #f0f0f0;
+  }
+  .arrow::before {
+    content: "▸"; /* hollow right arrow */
+    display: inline-block;
+    margin-right: 4px;
+    font-size: 1.2em;
+    transition: transform 0.2s ease;
+  }
+
+  .arrow.expanded::before {
+    content: "▾"; /* hollow down arrow */
+  }
+</style>
+
+<script>
+  function toggleAbstract(el) {
+    const abstract = el.nextElementSibling;
+    const isVisible = abstract.style.display === "block";
+    abstract.style.display = isVisible ? "none" : "block";
+    el.classList.toggle("expanded", !isVisible);
+  }
+</script>
 
 </body>
 </html>
