--- a/index.html
+++ b/index.html
@@ -156,13 +156,15 @@
   </p>    
   <p>• I'm currently a PhD candidate in Economics at The University of Melbourne, Australia.  
   </p>
+    <p>• I'm on the 2025-2026 job market.
+  </p>
 </div>
 
 <div style="margin-bottom: 30px;" id="Research Interests">
-       <h3 style="color: #2c3e50;">Research Interests</h3>
+       <h3 style="color: #2c3e50;">Research and Teaching Interests</h3>
   <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
        <p style="margin: 0 0 8px 0;">
-    <strong style="color: #d63384;"> Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance</strong>
+    <strong style="color: #d63384;"> Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance, High-Performance Computing (HPC)</strong>
   </p>    
   <p>   
           • My primary research focuses on shrinkage priors and variable selections. <br>
