--- a/research.html
+++ b/research.html
@@ -137,6 +137,24 @@
   <h3 style="color: #2c3e50;">Research and Working Papers</h3>
   <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
 
+
+<p style="margin: 0 0 8px 0;">
+     <strong style="color: #d63384;">Bayesian Model Assembly (preliminary) - JMP</strong>
+  </p>
+<div>
+  <p>
+    [ Working Paper | Code ]
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
+      <em>
+        To be updated
+      </em>
+    </span>
+  </p>
+</div>
+
+
+
   <p style="margin: 0 0 8px 0;">
      <strong style="color: #d63384;">A New Perspective of the Meese-Rogoff Puzzle: Application of Sparse Dynamic Shrinkage</strong>
   </p>
