--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
        <p style="margin: 0 0 8px 0;">
     <strong style="color: #d63384;"> Hi, welcome to my personal website!</strong>
   </p>    
-  <p>• I'm currently a PhD candidate in Economics at The University of Melbourne, Australia.  
-  </p>
-    <p>• I'm on the 2025-2026 job market.
+  <p>• I'm currently a PhD candidate in Economics at The University of Melbourne, Australia. <br>
+    • I'm on the 2025-2026 job market.
   </p>
 </div>
 
