--- a/teaching.html
+++ b/teaching.html
@@ -88,7 +88,7 @@
       <div class="contact-info">
 <!-- Icon block aligned to the right -->
 <div style="display: flex; justify-content: flex-end; gap: 12px; align-items: center; margin-top: 18px;">
-  <a href="mailto:fan.z@unimelb.edu.au" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
+  <a href="mailto:zhengfan2015@gmail.com" target="_blank" style="display: inline-flex; align-items: center; color: #333;">
     <i class="fas fa-envelope" style="font-size: 20px;" title="Email"></i>
   </a>
 
@@ -239,7 +239,7 @@
 		</div><!--// bd -->
 
         <div id="ft">
-            <p>Zheng Fan &mdash;           <a href="mailto:fan.z@unimelb.edu.au">fan.z <span class="circle">at</span> unimelb.edu.au</a></p> 
+            <p>Zheng Fan &mdash;           <a href="mailto:zhengfan2015@gmail.com">zhengfan2015 <span class="circle">at</span> gmail.com</a></p> 
                 <p>Website update in June 2025</a></p>
         </div><!--// footer -->
 
