--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <strong style="color: #d63384;"> Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance, High-Performance Computing (HPC)</strong>
   </p>    
   <p>   
-          • My primary research focuses on shrinkage priors and variable selections. <br>
+          • My primary research focuses on shrinkage priors and time series modelling. <br>
           • I also investigate methods for high-dimensional data. 
     </p>
 </div>
