--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
    
         <p>
-          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+          <a id="pdf" href="cv-page.html" target="_blank">Download CV</a>
         </p>
       </div>
     </div>
@@ -264,8 +264,7 @@
         <!-- Vertical Ellipse Frame with updated style/link -->
         <img src="https://www.dropbox.com/scl/fi/2scdw9mpwidva5gqhayjk/Zheng-image-3.png?rlkey=bucvifqqqjkv460hxgmuyph9c&raw=1" 
              alt="Zheng Fan" 
-             oncontextmenu="return false;" 
-             ondragstart="return false;"
+             
              style="width: 120px; height: 140px; object-fit: cover; border-radius: 50%; border: 1px solid #d63384; box-shadow: 0 2px 2px rgba(0,0,0,0.1);">
     </div>
     
