--- a/research.html
+++ b/research.html
@@ -109,7 +109,7 @@
   </a>
 </div>
         <p>
-          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+          <a id="pdf" href="cv-page.html" target="_blank">Download CV</a>
         </p>
       </div>
     </div>
@@ -232,6 +232,8 @@ Extending a demographic model initiated by Salop generates some suggestive theor
   <hr style="border: none; height: 1px; background-color: #ddd; margin: 6px 0;">
 
   <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
+    <p>– ESOBE 2025 (poster), Melbourn, 2024</p>
+    <p>– EcoSta 2025, Waseda University, Tokyo, 2025</p>
     <p>– 18th CFE-CMS 2024, King's College London, 2024</p>
     <p>– Econometric Society Australasia Meeting (ESAM), Monash University, Melbourne, 2024</p>
     <p>– (Poster) 6th Time Series and Forecasting Symposium, University of Sydney, 2024</p>
