--- a/skills.html
+++ b/skills.html
@@ -108,7 +108,7 @@
   </a>
 </div>
         <p>
-          <a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a>
+          <a id="pdf" href="cv-page.html" target="_blank">Download CV</a>
         </p>
       </div>
     </div>
