--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
    
         <p>
-          <a id="pdf" href="cv-page.html" target="_blank">Download CV</a>
+          <a id="pdf" href="cv-page.html">Download CV</a>
         </p>
       </div>
     </div>
