--- a/teaching.html
+++ b/teaching.html
@@ -108,7 +108,7 @@
   </a>
 </div>
         <p>
-          <a id="pdf" href="cv-page.html" target="_blank">Download CV</a>
+          <a id="pdf" href="cv-page.html">Download CV</a>
         </p>
       </div>
     </div>
