--- a/index.html
+++ b/index.html
@@ -284,6 +284,48 @@
 </div>
 
 
+<div style="margin-bottom: 30px;" id="JMP">
+  <h3 style="color: #2c3e50;">Job Market Paper</h3>
+  <hr style="border: none; height: 1px; background-color: #ddd; margin: 8px 0;">
+
+  <p style="margin: 0 0 8px 0;">
+    <strong style="color: #d63384;">
+      Dynamic Synthesis of Point Forecasts: A Cointegrated Bayesian Framework
+    </strong>
+  </p>
+
+  <span class="paper-links" style="font-size: 0.95rem;">
+    [ 
+    <a href="https://drive.google.com/file/d/13BnlJRaggg3YICvdml_a8Ei7IoEQGMV5/view?usp=drive_link" target="_blank"> The latest
+    Working Paper version</a> 
+    ]
+  </span>
+
+  <div style="margin-top: 12px; font-size: 0.95rem; line-height: 1.5; color: #333;">
+<div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 15px;">
+
+  <!-- Left column: Local video file -->
+<div style="flex: 1 1 200px; min-width: 100px; display: flex; align-items: center;">
+  <img src="video_VECM_MS_weights_3D_left.gif"
+       alt="VECM weight dynamics"
+       style="width: 100%; height: auto; border-radius: 1px;">
+</div>
+
+  <!-- Right column: Your original abstract (unchanged) -->
+  <div style="flex: 1 1 400px; min-width: 400px;">
+    <strong>Abstract.</strong>
+    <span>
+    This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
+Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by considering two key features: the ability of Bayesian Predictive Synthesis (McAlinn and West, 2019) to accommodate flexible, non-convex weights, and the capacity of Infinite Markov Pooling (Jin et al., 2022) to enable weights to transition across multiple equilibria.
+    </span>
+  </div>
+
+</div>
+
+</div>
+
+
+
 <!-- Flappy Zheng Game Section -->
 <div style="margin-bottom: 30px;" id="Game">
     <h3 style="color: #2c3e50;">Take a Break</h3>
