--- a/research.html
+++ b/research.html
@@ -262,18 +262,32 @@
 
 
 <p style="margin: 0 0 8px 0;">
-     <strong style="color: #d63384;">Bayesian Model Assembly (preliminary) - JMP</strong>
+     <strong style="color: #d63384;">Dynamic Synthesis of Point Forecasts: A Cointegrated Bayesian Framework - JMP</strong>
   </p>
 <div>
   <p>
-    [ Working Paper | Code ]
-     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
-    <span class="abstract-text" style="display: none;">
-      <em>
-        To be updated
-      </em>
-    </span>
-  </p>
+   <span class="paper-links" style="font-size: 0.95rem;">
+  [
+  Working Paper: 
+  <a href="https://drive.google.com/file/d/13BnlJRaggg3YICvdml_a8Ei7IoEQGMV5/view?usp=drive_link" target="_blank">latest version</a>,
+   <a href="https://drive.google.com/file/d/1F9MIjxwl478KkVjVPBg7mlraKvSNJlMA/view?usp=drive_link" target="_blank"> initial version (27th Nov 2025)</a>
+  |
+   Code 
+  ]
+</span>
+
+<span class="toggle-header arrow" onclick="toggleAbstract(this)">
+  Click to expand abstract
+</span>
+
+<span class="abstract-text" style="display: none; line-height: 1.55; color: #333;">
+  <em>
+   This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
+Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by considering two key features: the ability of Bayesian Predictive Synthesis (McAlinn and West, 2019) to accommodate flexible, non-convex weights, and the capacity of Infinite Markov Pooling (Jin et al., 2022) to enable weights to transition across multiple equilibria.
+
+  </em>
+</span>
+
 </div>
 
 
