--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
   <p style="margin: 0 0 8px 0;">
     <strong style="color: #d63384;">
-      Dynamic Synthesis of Point Forecasts: A Cointegrated Bayesian Framework
+      Bayesian Model Ensembling by Regularised Predictive Synthesis
     </strong>
   </p>
 
@@ -315,8 +315,8 @@
   <div style="flex: 1 1 400px; min-width: 400px;">
     <strong>Abstract.</strong>
     <span>
-    This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
-Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by considering two key features: the ability of Bayesian Predictive Synthesis (McAlinn and West, 2019) to accommodate flexible, non-convex weights, and the capacity of Infinite Markov Pooling (Jin et al., 2022) to enable weights to transition across multiple equilibria.
+ This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
+Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by providing flexible weight dynamics that allow non-convexity and transitions among different equilibrium configurations at the same time.
     </span>
   </div>
 
