--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   <span class="paper-links" style="font-size: 0.95rem;">
     [ 
     <a href="https://drive.google.com/file/d/13BnlJRaggg3YICvdml_a8Ei7IoEQGMV5/view?usp=drive_link" target="_blank"> The latest
-    Working Paper version</a> 
+    version</a> 
     ]
   </span>
 
@@ -325,6 +325,7 @@ Monte Carlo studies and empirical applications to economic growth and inflation 
 </div>
 
 
+<br><br><br><br>
 
 <!-- Flappy Zheng Game Section -->
 <div style="margin-bottom: 30px;" id="Game">
@@ -367,7 +368,7 @@ Monte Carlo studies and empirical applications to economic growth and inflation 
 
 		<div id="ft">
 			<p>Zheng Fan &mdash;           <a href="mailto:zhengfan2015@gmail.com">zhengfan2015 <span class="circle">at</span> gmail.com</a></p> 
-                <p>Website update in June 2025</a></p>
+                <p>Website update in Nov 2025</a></p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
