--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
   <p style="margin: 0 0 8px 0;">
     <strong style="color: #d63384;">
-      Bayesian Model Ensembling by Regularised Predictive Synthesis
+      Bayesian Model Ensembling with Regularised Predictive Synthesis
     </strong>
   </p>
 
@@ -315,8 +315,7 @@
   <div style="flex: 1 1 400px; min-width: 400px;">
     <strong>Abstract.</strong>
     <span>
- This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
-Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by providing flexible weight dynamics that allow non-convexity and transitions among different equilibrium configurations at the same time.
+This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible regularization on their long-run behavior while allowing for short-term deviations. The specification enables the ensemble weights to evolve around steady states and to adjust rapidly toward a new steady state when the predictive environment changes. Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over cutting-edge methods. The framework incorporates key features found in state-of-the-art approaches by providing flexible weight dynamics that permit non-convex weights to be negative and allow quick transitions across multiple steady configurations simultaneously.
     </span>
   </div>
 
