--- a/research.html
+++ b/research.html
@@ -270,20 +270,18 @@
   [
   Working Paper: 
   <a href="https://drive.google.com/file/d/13BnlJRaggg3YICvdml_a8Ei7IoEQGMV5/view?usp=drive_link" target="_blank">latest version</a>,
-   <a href="https://drive.google.com/file/d/1F9MIjxwl478KkVjVPBg7mlraKvSNJlMA/view?usp=drive_link" target="_blank"> initial version (27th Nov 2025)</a>
+   <a href="https://drive.google.com/file/d/1F9MIjxwl478KkVjVPBg7mlraKvSNJlMA/view?usp=drive_link" target="_blank"> initial version</a>
   |
    Code 
   ]
 </span>
 
-<span class="toggle-header arrow" onclick="toggleAbstract(this)">
-  Click to expand abstract
-</span>
+     <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
+    <span class="abstract-text" style="display: none;">
 
 <span class="abstract-text" style="display: none; line-height: 1.55; color: #333;">
   <em>
- This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model (VECM) structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible constraint on their long-run behavior while allowing for short-term deviations. The specification enables the weights to evolve around a stable equilibrium and to adjust rapidly toward a new equilibrium when the predictive environment changes.
-Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over state-of-the-art models. The framework advances the literature by providing flexible weight dynamics that allow non-convexity and transitions among different equilibrium configurations at the same time.
+This paper develops a new Bayesian framework for forecast combination that embeds a Vector Error Correction Model structure within a latent dynamic factor representation for model weights. By imposing cointegration across the latent weight structure, the framework establishes a structured yet flexible regularization on their long-run behavior while allowing for short-term deviations. The specification enables the ensemble weights to evolve around steady states and to adjust rapidly toward a new steady state when the predictive environment changes. Monte Carlo studies and empirical applications to economic growth and inflation forecasting show that the proposed approach delivers substantial improvements in predictive performance over cutting-edge methods. The framework incorporates key features found in state-of-the-art approaches by providing flexible weight dynamics that permit non-convex weights to be negative and allow quick transitions across multiple steady configurations simultaneously.
 
   </em>
 </span>
@@ -369,7 +367,7 @@ Extending a demographic model initiated by Salop generates some suggestive theor
   <hr style="border: none; height: 1px; background-color: #ddd; margin: 6px 0;">
 
   <ul style="list-style-type: none; padding-left: 0; margin: 0 0 0 10px; line-height: 0.8;">
-    <p>– ESOBE 2025 (poster), Melbourn, 2024</p>
+    <p>– ESOBE 2025 (poster), Melbourn, 2025</p>
     <p>– EcoSta 2025, Waseda University, Tokyo, 2025</p>
     <p>– 18th CFE-CMS 2024, King's College London, 2024</p>
     <p>– Econometric Society Australasia Meeting (ESAM), Monash University, Melbourne, 2024</p>
