--- a/research.html
+++ b/research.html
@@ -262,13 +262,13 @@
 
 
 <p style="margin: 0 0 8px 0;">
-     <strong style="color: #d63384;">Bayesian Model Ensembling by Regularised Predictive Synthesis - JMP</strong>
+     <strong style="color: #d63384;">Bayesian Model Ensembling with Regularised Predictive Synthesis </strong>
   </p>
 <div>
   <p>
    <span class="paper-links" style="font-size: 0.95rem;">
   [
-  Working Paper: 
+  Job Market Paper: 
   <a href="https://drive.google.com/file/d/13BnlJRaggg3YICvdml_a8Ei7IoEQGMV5/view?usp=drive_link" target="_blank">latest version</a>,
    <a href="https://drive.google.com/file/d/1F9MIjxwl478KkVjVPBg7mlraKvSNJlMA/view?usp=drive_link" target="_blank"> initial version</a>
   |
