--- a/research.html
+++ b/research.html
@@ -294,7 +294,7 @@ This paper develops a new Bayesian framework for forecast combination that embed
   </p>
 <div>
   <p>
-    [ <a href="https://arxiv.org/abs/2507.14408" target="_blank">Working Paper</a> | Code ]
+    [ <a href="https://arxiv.org/abs/2507.14408" target="_blank">Working Paper</a>, <b>R&R at JAE</b> | Code ] 
      <span class="toggle-header arrow" onclick="toggleAbstract(this)">Click to expand abstract</span>
     <span class="abstract-text" style="display: none;">
       <em>
