--- a/research.html
+++ b/research.html
@@ -305,7 +305,7 @@ This paper develops a new Bayesian framework for forecast combination that embed
 </div>
 
   <p style="margin: 0 0 8px 0;">
-     <strong style="color: #d63384;">A Hierarchical Markov-switching Model for Bull and Bear Markets (Dissertation: Chap 1. Working)</strong>
+     <strong style="color: #d63384;">A Hierarchical Markov-switching Model for Bull and Bear Markets</strong>
   </p>
 	<div>
   <p>
