--- a/teaching.html
+++ b/teaching.html
@@ -295,13 +295,14 @@
     <li>– <strong>ECON10003: Introductory Macroeconomics:</strong> 2019-S2; 2020-S1; 2021-S1; 2022-S1</li>
     <li>– <strong>ECON10005: Quantitative Methods 1:</strong> 2021-S1; 2022-S1;
       <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>;
-      <a href="https://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>
+      <a href="https://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>; 2026-Summer
     </li>
     <li>– <strong>ECON20001: Intermediate Macroeconomics:</strong> 2021-S2;
       <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>
     </li>
     <li>– <strong>ECON20003: Quantitative Methods 2:</strong>
-      <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>
+      <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;
+            <a href="https://github.com/zhengf1/2026SummerQM2" target="_blank">2026-Summer</a>
     </li>
     <li>– <strong>ECOM20001: Econometrics 1:</strong> 2022-S1;
       <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;
