--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
   <p>   
           • My primary research focuses on shrinkage priors and time series modelling. <br>
           • I also investigate methods for high-dimensional data. 
+          <br>
+            • Recent news: A New Perspective of the Meese-Rogoff Puzzle: Application of Sparse Dynamic Shrinkage, is currently <b>R&R at  the<i> Journal of Applied Econometrics</i></b>
     </p>
 </div>
 
